# Check-

./: README.md
Check/System/: .env.example  .gitignore  ANALIZE_SERIJA.bat  BUILD_EXE.bat  CHANGELOG.md  CHECK_SYSTEM.spec  DASHBOARD.bat  DEPLOY_MT4.bat  FIX_BRIDGE.bat  FIX_MT4.bat  KONTI.bat  LICENSE  PALAID.bat  PARBAUDI.bat  README.md  RELEASE_NOTES.md  SALIDZINI_MT4.bat  SETUP_ALL.bat  START_CHECK_SYSTEM.bat  START_DASHBOARD.bat  START_LIVE.bat  STOP.bat  UPDATE_AND_START.bat  UZSTADIT.bat  dashboard.py  pyproject.toml  run_live.py
Check/System/clients/: .gitkeep
Check/System/config/: platform.example.json  strategy.example.json  symbols.example.json  system.example.json  system.json  system.schema.json
Check/System/docs/: ARCHITECTURE.md  EXIT_PRESSURE.md  IMPLEMENTATION_PLAN.md  LIVE_OPERATION.md  MARKET_REGIMES.md  MT4_PROTOCOL.md  PROTOCOL.md  RISK.md  RISK_MANAGEMENT.md  RULES.md  SIGNAL_QUALITY.md  STRATEGIES.md  STRATEGY.md  SYSTEM_SPECIFICATION.md  TESTING.md  TRADE_MANAGEMENT.md  TRAILING.md  TROUBLESHOOTING.md
Check/System/docs/legacy/: ARCHITECTURE_V2_PLAN.md  LEGACY_DELETE_PLAN.md  LEGACY_DELETE_REPORT.md  LEGACY_INVENTORY.md  MT4_PROTOCOL_V2_SCHEMA.md
Check/System/engine/: ai_decision_layer.py  reason.py
Check/System/engine/analysis/: __init__.py  behavior.py  context.py  engine.py  impact.py  momentum.py  pressure.py  structure.py
Check/System/engine/core/: __init__.py  alerts.py  atomic_io.py  cache.py  clock.py  config.py  cycle.py  env_loader.py  history.py  instance.py  lifecycle.py  logging_setup.py  monitoring.py  monitoring_store.py  mt4_bridge.py  orchestrator.py  paths.py  performance.py  (+5 more)
Check/System/mt4/: README.md
Check/System/runtime/: audit.jsonl
Check/System/scripts/: LEJUPIELADE_UZREIZ.bat  build_exe.ps1  copy_mql4_to_mt4.bat  deploy_mt4.bat  deploy_mt4.ps1  generate_mql4_root.ps1  health.ps1  install.ps1  install_linux.sh  install_windows.ps1  lejupielade_uzreiz.ps1  run_tests.ps1  setup.ps1  start_dashboard.ps1  start_live.ps1  start_paper.ps1  stop.ps1  sync_paths.py
Check/System/tests/: conftest.py
Check/System/tools/: analyze_trade_series.py  check_app.py  compare_mt4_peers.py  dashboard.py  dashboard_core.py  diagnose_skip.py  explain_signal.py  export_audit.py  inspect_bridge.py  platform_store.py  reconcile_account.py  replay.py  replay_market.py  replay_signals.py  seed_local_config.py  show_bridges.py  show_paths.py  sync_system_config.py  validate_config.py  validate_live.py  validate_order_command.py
(+483 files in other folders)
